<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Payment.AddressActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/address"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/back"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <!--<TextView-->
                <!--android:id="@+id/btn_cancel"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:gravity="center_vertical"-->
                <!--android:layout_marginRight="15dp"-->
                <!--android:textColor="#FFFFFF"-->
                <!--android:textSize="14dp"-->
                <!--android:text="@string/cancel"/>-->
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@mipmap/address_top"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="30dp"
            android:textColor="#FFFFFF"
            android:text="@string/checkout"
            android:textSize="16dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/address"
            android:textSize="16dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#3C3C3C"
            android:text="@string/payment"
            android:textSize="16dp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@mipmap/input_background"
                android:layout_marginHorizontal="20dp">
                <EditText
                    android:id="@+id/edit_apartment_building_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/apartment_building_name"
                    android:textSize="17dp"
                    android:layout_marginHorizontal="20dp"
                    android:inputType="text"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/input_background"
                android:layout_marginHorizontal="20dp">
                <EditText
                    android:id="@+id/edit_street_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/street_address"
                    android:textSize="17dp"
                    android:layout_marginHorizontal="20dp"
                    android:inputType="text"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/input_background"
                android:layout_marginHorizontal="20dp">
                <EditText
                    android:id="@+id/edit_city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/city"
                    android:textSize="17dp"
                    android:layout_marginHorizontal="20dp"
                    android:inputType="text"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/input_background"
                android:layout_marginHorizontal="20dp">
                <TextView
                    android:id="@+id/txt_country"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:hint="@string/country_"
                    android:layout_marginLeft="20dp"
                    android:inputType="text"
                    android:textSize="17dp"
                    android:background="@android:color/transparent"/>
                <com.hbb20.CountryCodePicker
                    android:id="@+id/country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    app:ccp_showPhoneCode="false"
                    app:ccp_textSize="17dp"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_rememberLastSelection="true">
                </com.hbb20.CountryCodePicker>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/input_background"
                android:layout_marginHorizontal="20dp">
                <com.hbb20.CountryCodePicker
                    android:id="@+id/phone_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    app:ccp_textSize="17dp"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_rememberLastSelection="true">
                </com.hbb20.CountryCodePicker>
                <EditText
                    android:id="@+id/edit_phone_number"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_number"
                    android:layout_marginRight="20dp"
                    android:inputType="phone"
                    android:textSize="17dp"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/input_background"
                android:layout_marginHorizontal="20dp">
                <EditText
                    android:id="@+id/edit_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/pincode"
                    android:textSize="17dp"
                    android:layout_marginHorizontal="20dp"
                    android:inputType="text"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/chk_accept"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:text="@string/save_this"
            android:textSize="13dp"
            android:textColor="#707070"/>
        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/continue_btn"
            android:textColor="#ffffff"
            android:textAllCaps="false"
            android:textSize="17dp"
            android:background="@mipmap/btn_background_1"/>
    </LinearLayout>
</LinearLayout>