<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Profile.EditProfileActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/my_information"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/back"/>
        </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/input_background"
                android:layout_marginHorizontal="20dp">
                <EditText
                    android:id="@+id/edit_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/first_name"
                    android:textSize="17dp"
                    android:layout_marginHorizontal="20dp"
                    android:inputType="text"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/input_background"
                android:layout_marginHorizontal="20dp">
                <EditText
                    android:id="@+id/edit_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/last_name"
                    android:textSize="17dp"
                    android:layout_marginHorizontal="20dp"
                    android:inputType="text"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/input_background"
                android:layout_marginHorizontal="20dp">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/profile"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/txt_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="17dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/input_background"
                android:layout_marginHorizontal="20dp">
                <com.hbb20.CountryCodePicker
                    android:id="@+id/country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    app:ccp_textSize="17dp"
                    app:ccp_autoDetectCountry="true">
                </com.hbb20.CountryCodePicker>
                <EditText
                    android:id="@+id/edit_phone_number"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_number"
                    android:layout_marginRight="20dp"
                    android:inputType="phone"
                    android:textSize="17dp"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/input_background"
                android:layout_marginHorizontal="20dp">
                <EditText
                    android:id="@+id/edit_duns"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/duns"
                    android:textSize="17dp"
                    android:layout_marginHorizontal="20dp"
                    android:inputType="number"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/input_background"
                android:layout_marginHorizontal="20dp">
                <EditText
                    android:id="@+id/edit_activity_area"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/activity_area"
                    android:textSize="17dp"
                    android:layout_marginHorizontal="20dp"
                    android:inputType="text"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/input_background"
                android:layout_marginHorizontal="20dp">
                <EditText
                    android:id="@+id/edit_waste_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/waste_type"
                    android:textSize="17dp"
                    android:layout_marginHorizontal="20dp"
                    android:inputType="text"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/save"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:textSize="17dp"
                android:background="@mipmap/btn_background_1"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>