<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SalesAndPurchaseActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/sales_purchase"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/back"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <ImageView
                android:visibility="gone"
                android:id="@+id/btn_search"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:src="@mipmap/search"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="#3C3C3C"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@mipmap/tab_background"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_sales"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    style="@style/activeTabText"
                    android:text="@string/sales"/>
                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="15dp"
                    android:src="@mipmap/line_2"
                    android:scaleType="fitXY"/>
                <TextView
                    android:id="@+id/txt_purchase"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    style="@style/normalTabText"
                    android:text="@string/purchases"/>
            </LinearLayout>
            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>